Added the q_s_dot as an attribute to Mean Field.

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -60,7 +60,6 @@
     "        '''\n",
     "        self.state_indices = state_indices\n",
     "        self.control_indices = control_indices\n",
-    "#         self.mf = mean_field\n",
     "        self.bb = blackboard\n",
     "\n",
     "        # Inputs for numerical propagator\n",
@@ -74,6 +73,7 @@
     "        self.state_dim = 1\n",
     "        self.Gamma = 1\n",
     "        self.gamma = 1\n",
+    "        self.q_s_dot = np.array([0])  # must have same dimensions as q_s\n",
     "\n",
     "        # Inputs for numerical integration\n",
     "        self.integrateTol = 10**-3\n",
@@ -137,7 +137,7 @@
     "    def L_l_D_q_Dot(self, q_lD, p_lD):\n",
     "        # return 1 by state_dim, 1-D array\n",
     "        # each q_lD is a 1-D array of size 1 by state_dim array\n",
-    "        return q_lD\n",
+    "        return 1\n",
     "\n",
     "    def qp_rhs(self, t, qp_vec, **kwargs):\n",
     "        # u_s is constant (because of causality, remember?)\n",
@@ -244,15 +244,16 @@
     "        self.state_dim = 2\n",
     "        self.Gamma = 1 \n",
     "        self.gamma = 1\n",
+    "        self.q_s_dot = np.array([0,1])  # must have same dimensions as q_s\n",
     "\n",
     "        # Inputs for numerical integration\n",
     "        self.integrateTol = 10**-3\n",
     "        self.integrateMaxIter = 40\n",
     "\n",
     "        # Inputs for sliding window\n",
-    "        self.t_0 = 0 \n",
+    "        self.t_0 = 0\n",
     "        self.T = 2\n",
-    "        self.K = 1 \n",
+    "        self.K = 1\n",
     "\n",
     "        self.t_terminal = 2\n",
     "        self.n_s = 10\n",
@@ -307,7 +308,7 @@
     "    def L_l_D_q_Dot(self, q_lD, p_lD):\n",
     "        # return 1 by state_dim, 1-D array\n",
     "        # each q_lD is a 1-D array of size 1 by state_dim array\n",
-    "        return q_lD\n",
+    "        return 1\n",
     "\n",
     "    def qp_rhs(self, t, qp_vec, **kwargs):\n",
     "        # u_s is constant (because of causality, remember?)\n",
@@ -464,29 +465,36 @@
     "                        blackboard holds all of the most recent local values, e.g.\n",
     "                        {'q_s': {'1':3, '2':0}, 'p_mf': {'1':3, '2': 2}, 'u': {'1': 0}}\n",
     "                        It doesn't care which agent updated them most recently.  It only needs to know which values to update.\n",
-    "        q_p_u_dict initially will be filled\n",
+    "        q_p_u_dict initially will be filled.\n",
     "        '''\n",
-    "        self.q_p_u_dict={'q_s':{}, 'p_l':{}, 'p_mf':{}, 'u_s':{}}\n",
+    "        self.q_p_u_dict={'q_s':{}, 'p_l':{}, 'p_mf':{}, 'u_s':{}, 'q_s_dot':{}}\n",
     "        self.agents=[]\n",
     "        \n",
     "    def update_q_p_u_dict(self, agent):\n",
-    "        '''  This method should be called after local propagation of each agent\n",
+    "        '''  This method should be called after propagation of each agent\n",
     "        Inputs:\n",
     "            agent (instance of class Agent): this is the agent whose values we are updating\n",
     "        Outputs:\n",
     "            No outputs.  This method just updates the attributes of the blackboard,\n",
     "            just update the dictionary, agent_q_p_u_dict.\n",
     "        '''\n",
-    "        # determine which states pertain to this agent and replace the old values with new\n",
+    "        # Determine which states pertain to this agent and replace the old values with new\n",
     "\n",
     "        for state_ix in agent.state_indices:\n",
     "            self.q_p_u_dict['q_s'][str(state_ix)] = agent.qpu_vec[:agent.state_dim][state_ix-1]\n",
     "            self.q_p_u_dict['p_l'][str(state_ix)] = agent.qpu_vec[agent.state_dim:2*agent.state_dim][state_ix-1]\n",
     "            self.q_p_u_dict['p_mf'][str(state_ix)] = agent.qpu_vec[2*agent.state_dim:3*agent.state_dim][state_ix-1]\n",
+    "            self.q_p_u_dict['q_s_dot'][str(state_ix)] = agent.q_s_dot[state_ix-1]\n",
     "            \n",
     "        for control_ix in agent.control_indices:\n",
     "            self.q_p_u_dict['u_s'][str(control_ix)] = agent.qpu_vec[3*agent.state_dim:][control_ix-1]\n",
-    "            \n",
+    "        \n",
+    "        # update sensor values \"q_l, q_l_dot, u_s\"\n",
+    "#         self.q_p_u_dict['q_1'] = [] unnecessary because identical to q_s\n",
+    "#         self.q_p_u_dict['q_1_dot'] = []  # numerically estimated, or available from sensors\n",
+    "#         self.q_p_u_dict['u_s'] = []  # unnecessary because same as \"u_s\" above\n",
+    "        \n",
+    "        # add agent if not already added \n",
     "        if agent not in self.agents:\n",
     "            self.agents.append(agent)\n"
    ]
@@ -503,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -518,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -530,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -541,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -555,7 +563,7 @@
        " 'u_s': {'1': 0}}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -614,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -651,11 +659,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-37-728648cd7a5e>, line 23)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-37-728648cd7a5e>\"\u001b[0;36m, line \u001b[0;32m23\u001b[0m\n\u001b[0;31m    q_s_dot = # where to get this from?\u001b[0m\n\u001b[0m                                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def sliding_window(sliding_window_instance):\n",
     "    ''' \n",
@@ -676,10 +693,14 @@
     "    t = t_0 # wall clock time\n",
     "    qpu_vec = np.hstack([q_0, p_0, u_0])\n",
     "    while t < t_terminal:\n",
-    "        # get values from blackboard\n",
-    "        # get values from sensors\n",
+    "        # get values from blackboard:\n",
+    "        q_p_u_dict = bb.q_p_u_dict(sliding_window_instance)\n",
+    "        q_s = q_p_u_dict['q']\n",
+    "        q_s_dot = # where to get this from?\n",
+    "\n",
     "        # set initial conditions using those two things above\n",
-    "        p_0\n",
+    "        p_l_0 = sliding_window_instance.L_l(q_s, q_s_dot, u_s)\n",
+    "        p_l_D_0 = \n",
     "        # for the times, propagate_dynamics needs: t_0, T, and K.  T and K can come from the sliding_window_instance\n",
     "        #...t_0 will be passed in.  t_0 is the start of the window\n",
     "        qpu_vec, q_ls_bar, p_ls_bar, p_mfs_bar, u_bar, q_ls, p_ls, p_mfs, us = propagate_dynamics(qpu_vec, sliding_window_instance)\n",
@@ -689,7 +710,10 @@
     "        p_ls_bars.append(p_ls_bar)\n",
     "        p_mfs_bars.append(p_mfs_bar)\n",
     "        u_bars.append(u_bar)\n",
-    "        \n",
+    "    \n",
+    "    # update blackboard\n",
+    "    bb.update_q_p_u_dict(sliding_window_instance)\n",
+    "    \n",
     "    return q_ls_bars, p_ls_bars, p_mfs_bars, u_bars\n"
    ]
   },
