--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -107,7 +107,7 @@
     "        return 1\n",
     "    \n",
     "    def L_l_q_dot(self, q_s, q_s_dot, u_s):\n",
-    "        return q_l\n",
+    "        return q_s\n",
     "    \n",
     "    def H_l_nou(self, q_s, p_l, lambda_l):\n",
     "        return 1\n",
@@ -134,7 +134,7 @@
     "        # return scalar\n",
     "        return 1\n",
     "        \n",
-    "    def L_l_D_q_Dot(self, q_lD, p_lD):\n",
+    "    def L_l_D_q_Dot(self, q_l_D, q_l_D_Dot):\n",
     "        # return 1 by state_dim, 1-D array\n",
     "        # each q_lD is a 1-D array of size 1 by state_dim array\n",
     "        return 1\n",
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -560,10 +560,11 @@
        "{'p_l': {'1': 0, '2': 3},\n",
        " 'p_mf': {'1': 0, '2': 1},\n",
        " 'q_s': {'1': 0, '2': 2},\n",
+       " 'q_s_dot': {'1': 0, '2': 1},\n",
        " 'u_s': {'1': 0}}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -622,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -659,17 +660,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-37-728648cd7a5e>, line 23)",
+     "evalue": "invalid syntax (<ipython-input-58-8447da2fa15e>, line 24)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-37-728648cd7a5e>\"\u001b[0;36m, line \u001b[0;32m23\u001b[0m\n\u001b[0;31m    q_s_dot = # where to get this from?\u001b[0m\n\u001b[0m                                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-58-8447da2fa15e>\"\u001b[0;36m, line \u001b[0;32m24\u001b[0m\n\u001b[0;31m    u_s_0 = # If control is physical, then we should use the physical value.  IF not, then we can use the average u from the previous window.\u001b[0m\n\u001b[0m                                                                                                                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -693,16 +694,22 @@
     "    t = t_0 # wall clock time\n",
     "    qpu_vec = np.hstack([q_0, p_0, u_0])\n",
     "    while t < t_terminal:\n",
-    "        # get values from blackboard:\n",
-    "        q_p_u_dict = bb.q_p_u_dict(sliding_window_instance)\n",
-    "        q_s = q_p_u_dict['q']\n",
-    "        q_s_dot = # where to get this from?\n",
+    "        # get initial values from blackboard:\n",
+    "        q_p_u_dict = sliding_window_instance.bb.q_p_u_dict(sliding_window_instance)\n",
+    "        q_s_0 = q_p_u_dict['q_s'] # still need to pick out the individual states that we need.\n",
+    "        q_s_dot_0 = q_p_u_dict['q_s_dot'] # where to get this from?  blackboard\n",
+    "        u_s_0 = q_p_u_dict['u_s'] # If control is physical, then we should use the physical value.  \n",
+    "        # IF not, then we can use the average u, averaged over the previous window.  \n",
+    "        # For now, use the value from the end of the previous window.\n",
+    "        q_l_D_dot_0 = q_s_dot_0\n",
+    "        q_l_D_0 = q_s_0\n",
+    "        \n",
+    "        # set initial conditions using values from blackboard retrieved above\n",
+    "        p_l_0 = sliding_window_instance.L_l_q_Dot(q_s_0, q_s_dot_0, u_s_0) # compute using Dirac compatibility\n",
+    "        p_l_D_0 = sliding_window_instance.L_l_D_q_Dot(q_l_D_0, q_l_D_dot_0) # compute using Dirac compatibility\n",
     "\n",
-    "        # set initial conditions using those two things above\n",
-    "        p_l_0 = sliding_window_instance.L_l(q_s, q_s_dot, u_s)\n",
-    "        p_l_D_0 = \n",
     "        # for the times, propagate_dynamics needs: t_0, T, and K.  T and K can come from the sliding_window_instance\n",
-    "        #...t_0 will be passed in.  t_0 is the start of the window\n",
+    "        #...t_0 will be passed in.  t_0 is the start of the window.\n",
     "        qpu_vec, q_ls_bar, p_ls_bar, p_mfs_bar, u_bar, q_ls, p_ls, p_mfs, us = propagate_dynamics(qpu_vec, sliding_window_instance)\n",
     "        # qs, ps, and us will go to Mean Field somehow\n",
     "\n",
