Started writing the compute_gamma method:     - it will be run each time an agent is visited     - It needs to call L_l for each agent in self.bb.agents

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -72,7 +72,7 @@
     "        self.qpu_vec = np.hstack([self.q_s_0, self.p_l_0, self.p_mf_0, self.u_s_0])\n",
     "        self.state_dim = 1\n",
     "        self.Gamma = 1\n",
-    "        self.gamma = 1\n",
+    "        self.gamma = self.compute_gamma()  # gets recomputed every time agent is visited\n",
     "        self.q_s_dot = np.array([0])  # must have same dimensions as q_s\n",
     "\n",
     "        # Inputs for numerical integration\n",
@@ -88,6 +88,20 @@
     "        self.n_s = 10\n",
     "\n",
     "        self.validate_dimensions()\n",
+    "        \n",
+    "    def compute_gamma(self):\n",
+    "        # if only one agent, then gamma = 1\n",
+    "        if len(self.bb.agent) == 1:\n",
+    "            return 1\n",
+    "        q_s, p_l, p_mf, u_s = self.qpu_vec\n",
+    "        num = self.L_l(q_s, q_s_dot, u_s)\n",
+    "        denom = 0\n",
+    "\n",
+    "        assert len(self.bb.agent) != 0, 'Add agents to your blackboard by calling bb.update_q_p_u_dict'\n",
+    "        for agent in self.bb.agents:\n",
+    "            denom += agent.L_l(q_s, q_s_dot, u_s)\n",
+    "        self.gamma = float(num)/float(denom)\n",
+    "        \n",
     "\n",
     "    def validate_dimensions(self):\n",
     "        # TODO: move to parent class \"SlidingWindow\"\n",
@@ -170,7 +184,13 @@
     "        return np.concatenate([q_rhs_H_l, p_rhs_H_l])\n",
     "\n",
     "    def u_rhs(self, t, u_vec, **kwargs):\n",
-    "        return -1*self.Gamma*np.zeros(np.shape(u_vec))\n",
+    "        # iterate through agents in the blackboard\n",
+    "        qp_vec = kwargs['qp_vec']\n",
+    "        \n",
+    "        \n",
+    "        self.gamma\n",
+    "        u_dot = -1*self.Gamma*(self.gamma)\n",
+    "        return u_dot\n",
     "\n",
     "    ## Mean Field methods\n",
     "    def H_MF_nou(self, q_s, p_mf):\n",
@@ -210,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -243,7 +263,7 @@
     "        self.qpu_vec = np.hstack([self.q_s_0, self.p_l_0, self.p_mf_0, self.u_s_0])\n",
     "        self.state_dim = 2\n",
     "        self.Gamma = 1 \n",
-    "        self.gamma = 1\n",
+    "        self.gamma = 1 # gets computed each time the agent is visited\n",
     "        self.q_s_dot = np.array([0,1])  # must have same dimensions as q_s\n",
     "\n",
     "        # Inputs for numerical integration\n",
@@ -381,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -404,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -437,7 +457,9 @@
     "            # run propagation with keyword arguments state_dim_l, state_dim_mf\n",
     "\n",
     "            qp_vec = self.bb.construct_q_p(agent) # quench the necessary values to be quenched\n",
-    "            qp_vec = qp_rhs_H_s_nou(qp_vec)"
+    "            qp_vec = qp_rhs_H_s_nou(qp_vec)\n",
+    "            \n",
+    "            # compute self.gamma for the agent"
    ]
   },
   {
@@ -449,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -511,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -526,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -538,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -549,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -564,7 +586,7 @@
        " 'u_s': {'1': 0}}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -623,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -660,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -689,7 +711,7 @@
     "        q_p_u_dict = sliding_window_instance.bb.q_p_u_dict(sliding_window_instance)\n",
     "        q_s_0 = q_p_u_dict['q_s'] # still need to pick out the individual states that we need.\n",
     "        q_s_dot_0 = q_p_u_dict['q_s_dot'] # where to get this from?  blackboard\n",
-    "        u_s_0 = q_p_u_dict['u_s'] # If control is physical, then we should use the physical value.  \n",
+    "        u_s_0 = q_p_u_dict['u_s'] # If control is physical, then we should use the physical value.\n",
     "        # IF not, then we can use the average u, averaged over the previous window.  \n",
     "        # For now, use the value from the end of the previous window.\n",
     "        q_l_D_dot_0 = q_s_dot_0\n",
@@ -700,7 +722,6 @@
     "        p_l_D_0 = sliding_window_instance.L_l_D_q_Dot(q_l_D_0, q_l_D_dot_0) # compute using Dirac compatibility\n",
     "        \n",
     "        # assign initial conditions to sliding_window_instance\n",
-    "        \n",
     "        \n",
     "        # for the times, propagate_dynamics needs: t_0, T, and K.  T and K can come from the sliding_window_instance\n",
     "        #...t_0 will be passed in.  t_0 is the start of the window.\n",
