Finished the compute_gamma method, now moving on to:     - use the Synchronizer class instead of callind sliding_window method directly     - compute the rest of the things necessary for u-dot:       - beta       - alpha       - I think that's it?

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 82,
    "metadata": {
     "collapsed": false
    },
@@ -70,10 +70,10 @@
     "        self.p_mf_0 = np.array([0])\n",
     "        self.u_s_0 = np.array([0])\n",
     "        self.qpu_vec = np.hstack([self.q_s_0, self.p_l_0, self.p_mf_0, self.u_s_0])\n",
+    "        self.q_s_dot = np.array([0])  # must have same dimensions as q_s\n",
     "        self.state_dim = 1\n",
     "        self.Gamma = 1\n",
-    "        self.gamma = self.compute_gamma()  # gets recomputed every time agent is visited\n",
-    "        self.q_s_dot = np.array([0])  # must have same dimensions as q_s\n",
+    "        self.gamma = 1  # gets recomputed every time agent is visited\n",
     "\n",
     "        # Inputs for numerical integration\n",
     "        self.integrateTol = 10**-3\n",
@@ -91,13 +91,14 @@
     "        \n",
     "    def compute_gamma(self):\n",
     "        # if only one agent, then gamma = 1\n",
-    "        if len(self.bb.agent) == 1:\n",
+    "        if len(self.bb.agents) == 1:\n",
     "            return 1\n",
     "        q_s, p_l, p_mf, u_s = self.qpu_vec\n",
+    "        q_s_dot = self.q_s_dot\n",
     "        num = self.L_l(q_s, q_s_dot, u_s)\n",
     "        denom = 0\n",
     "\n",
-    "        assert len(self.bb.agent) != 0, 'Add agents to your blackboard by calling bb.update_q_p_u_dict'\n",
+    "        assert len(self.bb.agents) != 0, 'Add agents to your blackboard by calling bb.update_q_p_u_dict(<agent>)'\n",
     "        for agent in self.bb.agents:\n",
     "            denom += agent.L_l(q_s, q_s_dot, u_s)\n",
     "        self.gamma = float(num)/float(denom)\n",
@@ -230,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 83,
    "metadata": {
     "collapsed": true
    },
@@ -401,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 86,
    "metadata": {
     "collapsed": false
    },
@@ -424,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 101,
    "metadata": {
     "collapsed": false
    },
@@ -454,12 +455,16 @@
     "            state_dim_l = len(agent.state_indices)\n",
     "            # set difference between all states in all agents, and states in current agent\n",
     "            state_dim_mf = set([agent_i.state_indices for agent_i in self.agents for agent_i.state_indices in agent_i]) - set(agent.state_indices)\n",
-    "            # run propagation with keyword arguments state_dim_l, state_dim_mf\n",
     "\n",
     "            qp_vec = self.bb.construct_q_p(agent) # quench the necessary values to be quenched\n",
     "            qp_vec = qp_rhs_H_s_nou(qp_vec)\n",
     "            \n",
-    "            # compute self.gamma for the agent"
+    "            # compute self.gamma for the agent\n",
+    "            agent.compute_gamma() # gets recomputed every time agent is visited\n",
+    "            \n",
+    "            # run propagation with keyword arguments state_dim_l, state_dim_mf\n",
+    "            sliding_window(agent)\n",
+    "            "
    ]
   },
   {
@@ -471,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 102,
    "metadata": {
     "collapsed": false
    },
@@ -533,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 103,
    "metadata": {
     "collapsed": false
    },
@@ -548,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 104,
    "metadata": {
     "collapsed": false
    },
@@ -560,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 91,
    "metadata": {
     "collapsed": false
    },
@@ -571,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 92,
    "metadata": {
     "collapsed": false
    },
@@ -586,7 +591,7 @@
        " 'u_s': {'1': 0}}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 93,
    "metadata": {
     "collapsed": false
    },
@@ -645,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 96,
    "metadata": {
     "collapsed": false
    },
@@ -654,13 +659,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0. 0. 0. 0.] [0.] [0.] [0.] [0.] [array([0.])] [array([0.])] [array([0.])] [array([0.])]\n"
+      "[ 0.  0.  0. -2.] [0.] [0.] [0.] [-1.] [array([0.])] [array([0.])] [array([0.])] [array([-1.])]\n",
+      "[ 0.         82.30417415  0.          0.40596919  0.         81.30417415\n",
+      "  0.        ] [ 0.         11.57728582] [0.        1.1035885] [ 0.         10.57728582] [0.] [array([ 0.        , 11.57728582])] [array([0.       , 1.1035885])] [array([ 0.        , 10.57728582])] [array([0.])]\n"
      ]
     }
    ],
    "source": [
     "print qpu_vec, q_ss_bar, p_ls_bar, p_mfs_bar, u_bar, q_ss, p_ls, p_mfs, us\n",
-    "# print qpu_vec2, q_ss_bar2, p_ls_bar2, p_mfs_bar2, u_bar2, q_ss2, p_ls2, p_mfs2, us2"
+    "\n",
+    "print qpu_vec2, q_ss_bar2, p_ls_bar2, p_mfs_bar2, u_bar2, q_ss2, p_ls2, p_mfs2, us2"
    ]
   },
   {
@@ -682,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 97,
    "metadata": {
     "collapsed": false
    },
